--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body, html{
 body{
   margin: 0px;
   font-size: 18px;
-  background-image: url("http://intrawallpaper.com/wp-content/uploads/cat-wallpaper-animals.jpg");
+  background-image: url("https://i.ytimg.com/vi/VMLjLDr6k1A/maxresdefault.jpg");
   background-size: auto 100%;
   background-repeat: no-repeat;
 }
@@ -26,4 +26,5 @@ body, a:link, a:visited, a:active{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+  background-size:200px;
 }
