--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body{
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .addPlayerButton{
   padding:5px 12px;
   float:right;
 }
@@ -27,4 +27,11 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
   background-size:200px;
+} 
+.player{
+  position:absolute;
+  background-image: url("http://www.clipartbest.com/cliparts/xTg/o5e/xTgo5e9Lc.png");
+  background-size: 100%;
+  height:100px;
+  width:100px;
 }
