--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,8 @@ body, a:link, a:visited, a:active{
   height:100px;
   width:100px;
 }
+.particle{
+  border:5px solid red;
+  border-radius:5px;
+  position:absolute;
+} 
