--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body, a:link, a:visited, a:active{
   background-size: 100%;
   height:100px;
   width:100px;
-  border:1px solid black;
+  /*border:1px solid black;*/
   z-index:0;
 }
 .particle{
