--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body, a:link, a:visited, a:active{
 .title, .addDancerButton, .addPlayerButton{
   padding:5px 12px;
   float:right;
+  background-color: #777;
 }
 .stopButton {
   padding:5px 12px;
